create basic snapshot view of each location

--- a/index.html
+++ b/index.html
@@ -29,15 +29,49 @@
   </nav>
 
   <h1 id="name">BUSY MONITOR</h1>
-  <table id="options">
-    <tr>
-      <td>Dewick</td>
-      <td>Carmichael</td>
-    </tr>
-    <tr>
-      <td>Tisch</td>
-      <td>Eaton Lab </td>
-    </tr>
-  </table>
 
+  <div class="row">
+      <div class="col-md-6">
+          <div class="snapshot">
+            <h3>Dewick</h3>
+            <ul class="check">
+              <li>There are currently xxx - xxx people right now</li>
+              <li>People typically spend yyy minutes</li>
+              <li>Open until zzz PM today</li>
+            </ul>
+          </div>
+      </div>
+      <div class="col-md-6">
+          <div class="snapshot">
+            <h3>Carmichael</h3>
+            <ul class="check">
+              <li>There are currently xxx - xxx people right now</li>
+              <li>People typically spend yyy minutes</li>
+              <li>Open until zzz PM today</li>
+            </ul>
+          </div>
+      </div>
+  </div>
+  <div class="row">
+      <div class="col-md-6">
+          <div class="snapshot">
+            <h3>Tisch</h3>
+            <ul class="check">
+              <li>There are currently xxx - xxx people right now</li>
+              <li>People typically spend yyy minutes</li>
+              <li>Open until zzz PM today</li>
+            </ul>
+          </div>
+      </div>
+      <div class="col-md-6">
+          <div class="snapshot">
+            <h3>Eaton Lab</h3>
+            <ul class="check">
+              <li>There are currently xxx - xxx people right now</li>
+              <li>People typically spend yyy minutes</li>
+              <li>Open until zzz PM today</li>
+            </ul>
+          </div>
+      </div>
+  </div>
 </body>
