add battery sumbols and captions

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   <h1 id="name">BUSY MONITOR</h1>
 
   <div class="row">
-      <div class="col-md-6">
-          <div class="snapshot">
+    <div class="col-md-6">
+        <div class="snapshot clearfix">
+          <div class="pull-left">
             <h3>Dewick</h3>
             <ul class="check">
               <li>There are currently xxx - xxx people right now</li>
@@ -40,21 +41,33 @@
               <li>Open until zzz PM today</li>
             </ul>
           </div>
+          <figure class="pull-right">
+            <img  src="batteries/b3.png" alt="quite busy" />
+            <figcaption class="text-center">Quite Busy</figcaption>
+          </figure>
+        </div>
+    </div>
+    <div class="col-md-6">
+      <div class="snapshot clearfix">
+        <div class="pull-left">
+          <h3>Carmichael</h3>
+          <ul class="check">
+            <li>There are currently xxx - xxx people right now</li>
+            <li>People typically spend yyy minutes</li>
+            <li>Open until zzz PM today</li>
+          </ul>
+        </div>
+        <figure class="pull-right">
+          <img  src="batteries/b2.png" alt="somewhat busy" />
+          <figcaption class="text-center">Somewhat Busy</figcaption>
+        </figure>
       </div>
-      <div class="col-md-6">
-          <div class="snapshot">
-            <h3>Carmichael</h3>
-            <ul class="check">
-              <li>There are currently xxx - xxx people right now</li>
-              <li>People typically spend yyy minutes</li>
-              <li>Open until zzz PM today</li>
-            </ul>
-          </div>
-      </div>
+    </div>
   </div>
   <div class="row">
-      <div class="col-md-6">
-          <div class="snapshot">
+    <div class="col-md-6">
+        <div class="snapshot clearfix">
+          <div class="pull-left">
             <h3>Tisch</h3>
             <ul class="check">
               <li>There are currently xxx - xxx people right now</li>
@@ -62,16 +75,27 @@
               <li>Open until zzz PM today</li>
             </ul>
           </div>
+          <figure class="pull-right">
+            <img src="batteries/b4.png" alt="very busy" />
+            <figcaption class="text-center">Very Busy</figcaption>
+          </figure>
+        </div>
+    </div>
+    <div class="col-md-6">
+      <div class="snapshot clearfix">
+        <div class="pull-left">
+          <h3>Eaton Lab</h3>
+          <ul class="check">
+            <li>There are currently xxx - xxx people right now</li>
+            <li>People typically spend yyy minutes</li>
+            <li>Open until zzz PM today</li>
+          </ul>
+        </div>
+        <figure class="pull-right">
+          <img  src="batteries/b1.png" alt="not busy" />
+          <figcaption class="text-center">Not Busy</figcaption>
+        </figure>
       </div>
-      <div class="col-md-6">
-          <div class="snapshot">
-            <h3>Eaton Lab</h3>
-            <ul class="check">
-              <li>There are currently xxx - xxx people right now</li>
-              <li>People typically spend yyy minutes</li>
-              <li>Open until zzz PM today</li>
-            </ul>
-          </div>
-      </div>
+    </div>
   </div>
 </body>
