--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <meta charset="UTF-8" />
+  <link href='https://fonts.googleapis.com/css?family=Julius%20Sans%20One' rel='stylesheet'>
   <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="base.css" />
 </head>
@@ -32,47 +33,52 @@
 
   <div class="row">
     <div class="col-md-6">
+      <a href="#">
         <div class="snapshot clearfix">
           <div class="pull-left">
-            <h3>Dewick</h3>
+            <p class="location">Dewick</p>
             <ul class="check">
-              <li>There are currently xxx - xxx people right now</li>
-              <li>People typically spend yyy minutes</li>
-              <li>Open until zzz PM today</li>
+              <li>There are currently <span class="detail">xxx - xxx</span> people</li>
+              <li>People typically spend <span class="detail">yyy</span> minutes</li>
+              <li>Open until <span class="detail">zzz PM</span> today</li>
             </ul>
           </div>
           <figure class="pull-right">
-            <img  src="batteries/b3.png" alt="quite busy" />
+            <img src="batteries/b3.png" alt="quite busy" />
             <figcaption class="text-center">Quite Busy</figcaption>
           </figure>
         </div>
+      </a>
     </div>
     <div class="col-md-6">
-      <div class="snapshot clearfix">
-        <div class="pull-left">
-          <h3>Carmichael</h3>
-          <ul class="check">
-            <li>There are currently xxx - xxx people right now</li>
-            <li>People typically spend yyy minutes</li>
-            <li>Open until zzz PM today</li>
-          </ul>
+      <a href="#">
+        <div class="snapshot clearfix">
+          <div class="pull-left">
+            <p class="location">Carmichael</p>
+            <ul class="check">
+              <li>There are currently <span class="detail">xxx - xxx</span> people</li>
+              <li>People typically spend <span class="detail">yyy</span> minutes</li>
+              <li>Open until <span class="detail">zzz PM</span> today</li>
+            </ul>
+          </div>
+          <figure class="pull-right">
+            <img src="batteries/b2.png" alt="somewhat busy" />
+            <figcaption class="text-center">Somewhat Busy</figcaption>
+          </figure>
         </div>
-        <figure class="pull-right">
-          <img  src="batteries/b2.png" alt="somewhat busy" />
-          <figcaption class="text-center">Somewhat Busy</figcaption>
-        </figure>
-      </div>
+      </a>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
+      <a href="#">
         <div class="snapshot clearfix">
           <div class="pull-left">
-            <h3>Tisch</h3>
+            <p class="location">Tisch</p>
             <ul class="check">
-              <li>There are currently xxx - xxx people right now</li>
-              <li>People typically spend yyy minutes</li>
-              <li>Open until zzz PM today</li>
+              <li>There are currently <span class="detail">xxx - xxx</span> people</li>
+              <li>People typically spend <span class="detail">yyy</span> minutes</li>
+              <li>Open until <span class="detail">zzz PM</span> today</li>
             </ul>
           </div>
           <figure class="pull-right">
@@ -80,22 +86,25 @@
             <figcaption class="text-center">Very Busy</figcaption>
           </figure>
         </div>
+      </a>
     </div>
     <div class="col-md-6">
-      <div class="snapshot clearfix">
-        <div class="pull-left">
-          <h3>Eaton Lab</h3>
-          <ul class="check">
-            <li>There are currently xxx - xxx people right now</li>
-            <li>People typically spend yyy minutes</li>
-            <li>Open until zzz PM today</li>
-          </ul>
+      <a href="#">
+        <div class="snapshot clearfix">
+          <div class="pull-left">
+            <p class="location">Eaton Lab</p>
+            <ul class="check">
+              <li>There are currently <span class="detail">xxx - xxx</span> people</li>
+              <li>People typically spend <span class="detail">yyy</span> minutes</li>
+              <li>Open until <span class="detail">zzz PM</span> today</li>
+            </ul>
+          </div>
+          <figure class="pull-right">
+            <img src="batteries/b1.png" alt="not busy" />
+            <figcaption class="text-center">Not Busy</figcaption>
+          </figure>
         </div>
-        <figure class="pull-right">
-          <img  src="batteries/b1.png" alt="not busy" />
-          <figcaption class="text-center">Not Busy</figcaption>
-        </figure>
-      </div>
+      </a>
     </div>
   </div>
 </body>
