basic view of detail page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="row">
     <div class="col-md-6">
-      <a href="#">
+      <a href="dewick.html">
         <div class="snapshot clearfix">
           <div class="pull-left">
             <p class="location">Dewick</p>
