--- a/dewick.html
+++ b/dewick.html
@@ -57,7 +57,21 @@
       <span>Sunday: 11 AM to 9 PM</span><br>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-4">
+      <figure>
+        <img src="batteries/b3.png" alt="quite busy" />
+        <figcaption>Quite Busy</figcaption>
+      </figure>
+    </div>
+    <div class="col-md-4">
+      <div id="chartContainer"></div>
+    </div>
+  </div>
 
 
+<script type="text/javascript" src="detail.js"></script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </body>
 </html>
