reorganize layout, add transition to dropdown

--- a/dewick.html
+++ b/dewick.html
@@ -48,24 +48,24 @@
         <li>People typically spend <span class="detail">yyy</span> minutes</li>
         <li>Open until <span class="detail">zzz PM</span> today</li>
       </ul>
+      <br>
+      <span class="emph">Hours of Operation:</span><br>
+      <ul class="check">
+      <li>Monday - Thursday: 7:30 AM to 9 PM</li>
+      <li>Friday: 7:30 AM to 8 PM</li>
+      <li>Saturday: 8 AM to 8 PM</li>
+      <li>Sunday: 11 AM to 9 PM</li>
     </div>
     <div class="col-md-4">
-      <span class="emph">Hours of Operation:</span><br>
-      <span>Monday - Thursday: 7:30 AM to 9 PM</span><br>
-      <span>Friday: 7:30 AM to 8 PM</span><br>
-      <span>Saturday: 8 AM to 8 PM</span><br>
-      <span>Sunday: 11 AM to 9 PM</span><br>
+      <div id="chartContainer"></div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-4">
       <figure>
-        <img src="batteries/b3.png" alt="quite busy" />
+        <img class="bat_img" src="batteries/b3.png" alt="quite busy" />
         <figcaption>Quite Busy</figcaption>
       </figure>
-    </div>
-    <div class="col-md-4">
-      <div id="chartContainer"></div>
     </div>
   </div>
 
