--- a/public/tisch.html
+++ b/public/tisch.html
@@ -27,7 +27,7 @@
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
           <li><a href="#">Carmichael</a></li>
           <li><a href="#">Dewick</a></li>
-          <li><a href="#">Tisch Library</a></li>
+          <li><a href="#">Eaton Lab</a></li>
         </ul>
       </div>
       <div id="navbar" class="navbar-collapse">
@@ -39,22 +39,22 @@
       </div>
     </div>
   </nav>
-  <h1 id="name">Eaton Lab</h1>
+  <h1 id="name">Tisch Library</h1>
   <div class="row">
     <div class="col-md-4">
       <span class="emph">Overview:</span><br>
       <ul class="check">
-        <li>There are currently <span class="detail">xxx - xxx</span> people in Eaton Lab</li>
+        <li>There are currently <span class="detail">xxx - xxx</span> people in Tisch Library</li>
         <li>People typically spend <span class="detail">yyy</span> minutes</li>
         <li>Open until <span class="detail">zzz PM</span> today</li>
       </ul>
       <br>
       <span class="emph">Hours of Operation:</span><br>
       <ul class="check">
-      <li>Monday - Thursday: 9 AM to 4 AM</li>
-      <li>Friday: 9 AM to 8 PM</li>
-      <li>Saturday: 10 AM to 5 PM</li>
-      <li>Sunday: 12 PM to 4 AM</li>
+      <li>Monday - Thursday: 7:45 AM to 1 AM (3 AM for Late Night Study)</li>
+      <li>Friday: 7:45 AM to 9 PM (12 AM for Late Night Study)</li>
+      <li>Saturday: 10 AM to 9 PM (12 AM for Late Night Study)</li>
+      <li>Sunday: 10 AM to 1 AM (3 AM for Late Night Study)</li>
     </div>
     <div class="col-md-4">
       <div id="chartContainer"></div>
