--- a/public/dewick.html
+++ b/public/dewick.html
@@ -51,26 +51,27 @@
       <br>
       <span class="emph">Hours of Operation:</span><br>
       <ul class="check">
-      <li>Monday - Thursday: 7:30 AM to 9 PM</li>
-      <li>Friday: 7:30 AM to 8 PM</li>
-      <li>Saturday: 8 AM to 8 PM</li>
-      <li>Sunday: 11 AM to 9 PM</li>
-    </div>
-    <div class="col-md-4">
-      <div id="chartContainer"></div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
+        <li>Monday - Thursday: 7:30 AM to 9 PM</li>
+        <li>Friday: 7:30 AM to 8 PM</li>
+        <li>Saturday: 8 AM to 8 PM</li>
+        <li>Sunday: 11 AM to 9 PM</li>
+      </ul>
       <figure>
         <img class="bat_img" src="/images/b3.png" alt="quite busy" />
         <figcaption>Quite Busy</figcaption>
       </figure>
     </div>
+    <div class="col-md-4">
+      <div id="chartContainer"></div>
+    </div>
+    <div class="col-md-4" id="dining_info">
+    </div>
   </div>
+  
 
 
 <script type="text/javascript" src="/js/detail.js"></script>
+<script type="text/javascript" src="/js/dining.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </body>
