--- a/public/carmichael.html
+++ b/public/carmichael.html
@@ -14,6 +14,9 @@
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+  <!-- Phone Responsive Meta Tag -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- Real time updates -->
   <script>
     TThF_percentage = {7:5,8:20,9:20,10:40,11:50,12:60,13:50,14:40,15:20,16:20,17:20,18:55,19:70,20:0}
