--- a/public/carmichael.html
+++ b/public/carmichael.html
@@ -150,7 +150,7 @@
   <div class="row">
     <div class="col-md-4">
       <figure>
-        <img id = "bat_image" class="bat_img" alt="quite busy" />
+        <img id = "bat_image" class="bat_img" alt="busy-battery" />
         <figcaption id = "figcaption"></figcaption>
       </figure>
     </div>
