eaton real-time

--- a/public/eaton.html
+++ b/public/eaton.html
@@ -46,13 +46,13 @@
           }
         }
         else {
-          if(MTWThF_percentage[hour] == undefined) {
+          if(MTWTh_percentage[hour] == undefined) {
             percentage.innerHTML = "0%";
             isItClosed.innerHTML = "This place is closed right now";
           }
           else {
-            percentage_num = MTWThF_percentage[hour]
-            percentage.innerHTML = MTWThF_percentage[hour] + "%";
+            percentage_num = MTWTh_percentage[hour]
+            percentage.innerHTML = MTWTh_percentage[hour] + "%";
           }
         }
       }
