--- a/public/about.html
+++ b/public/about.html
@@ -28,7 +28,7 @@
       <div class="container text-center">
         <div id="navbar" class="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li class="active"><a href="about.html">About</a></li>
             <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
