--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!-- Make the website fully responsive -->
-  <link rel="stylesheet" href="stylesheets/responsive.css">
+  <link rel="stylesheet" href="stylesheets/index.css">
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
