contact html added image

--- a/public/contact.html
+++ b/public/contact.html
@@ -38,6 +38,11 @@
 
     <h1 id="name">BUSY MONITOR</h1>
 
+    <p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu. Alternatively, walk up and down the Memorial Steps 13 times and then shout "I DEMAND TO BE HEARD."
+      <img src="/images/tufts-logo.png" alt="Tufs Logo" />
+
+    </p>
+
 </body>
 
 </html>
