updated about and contact

--- a/public/about.html
+++ b/public/about.html
@@ -36,7 +36,12 @@
       </div>
     </nav>
 
-    <h1 id="name">BUSY MONITOR</h1>
+    <h1 id="name">BUSY MONITOR</h1>  
+
+    <p id="text">Busy Monitor tracks live network traffic to inform students on how busy or quiet key locations are around the Medford campus. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br>
+      <img src="/images/tufts-logo.png" alt="Tufs Logo" />
+    </p>
+
 </body>
 
 </html>
