--- a/public/contact.html
+++ b/public/contact.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!-- Make the website fully responsive -->
-  
+  <link rel="stylesheet" href="stylesheets/index.css">
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -40,7 +40,6 @@
 
     <p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br>
       <img src="/images/tufts-logo.png" alt="Tufs Logo" />
-
     </p>
 
 </body>
