--- a/public/about.html
+++ b/public/about.html
@@ -38,7 +38,7 @@
 
     <h1 id="name">BUSY MONITOR</h1>  
 
-    <p id="text">Busy Monitor tracks live network traffic to inform students on how busy or quiet key locations are around the Medford campus. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br>
+    <p id="text">Busy Monitor informs students on how busy key campus locations are by tracking their live network traffic. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br><br>
       <img src="/images/tufts-logo.png" alt="Tufs Logo" />
     </p>
 
