--- a/public/contact.html
+++ b/public/contact.html
@@ -38,7 +38,7 @@
 
     <h1 id="name">BUSY MONITOR</h1>
 
-    <p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br>
+    <p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br><br>
       <img src="/images/tufts-logo.png" alt="Tufs Logo" />
     </p>
 
