--- a/public/dewick.html
+++ b/public/dewick.html
@@ -25,16 +25,16 @@
           <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-          <li><a href="#">Carmichael</a></li>
-          <li><a href="#">Eaton Lab</a></li>
-          <li><a href="#">Tisch Library</a></li>
+          <li><a href="carmichael.html">Carmichael</a></li>
+          <li><a href="eaton.html">Eaton Lab</a></li>
+          <li><a href="tisch.html">Tisch Library</a></li>
         </ul>
       </div>
       <div id="navbar" class="navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
