--- a/public/dewick.html
+++ b/public/dewick.html
@@ -25,9 +25,9 @@
           <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
-          <li><a href="#">Carmichael</a></li>
-          <li><a href="#">Eaton Lab</a></li>
-          <li><a href="#">Tisch Library</a></li>
+          <li><a href="carmichael.html">Carmichael</a></li>
+          <li><a href="eaton.html">Eaton Lab</a></li>
+          <li><a href="tisch.html">Tisch Library</a></li>
         </ul>
       </div>
       <div id="navbar" class="navbar-collapse">
