--- a/public/about.html
+++ b/public/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Busy Monitor</title>
+  <title>About Us</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -41,6 +41,33 @@
     <p id="text">Busy Monitor informs students on how busy key campus locations are by tracking their live network traffic. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br><br>
       <img src="/images/tufts-logo.png" alt="Tufs Logo" />
     </p>
+
+
+    <div class = flip-container ontouchstart="this.classList.toggle('hover');">
+      <div class = indiphotos>
+        <div class = front><img class = EBPhoto id = leo src = "images/jl.png"></div>
+        <div class = "back red"><h1 class = name>Gill Eun Kang</h1><br>Majoring in Economics and Philosophy<br>From Seoul, South Korea<br>Loves Ganjang Gaejang<br>Class of 2018<br><br><hi class = position>President</hi></div>
+      </div>
+    </div>
+    <div class = flip-container ontouchstart="this.classList.toggle('hover');">
+      <div class = indiphotos>
+        <div class = front><img class = EBPhoto src = "images/jp.png"></div>
+        <div class = "back blue"><h1 class = name>Kun Woo (Kevin) Lee</h1><br>Majoring in Biopsychology and Philosophy<br>From Irvine, CA<br>Loves samggyupsal<br>Class of 2019<br><br><hi class = position>Vice President</hi></div>
+      </div>
+    </div>
+    <div class = flip-container ontouchstart="this.classList.toggle('hover');">
+      <div class = indiphotos>
+        <div class = front><img class = EBPhoto src = "images/mf.png"></div>
+        <div class = "back red"><h1 class = name>Dennis Kim</h1><br>Majoring in Cognitive Brain Science<br>From Clarksville, MD<br>Loves Jjajangmyun<br>Class of 2018<br><br><hi class = position>Senior Advisor</hi></div>
+      </div>
+    </div>
+    <div class = flip-container ontouchstart="this.classList.toggle('hover');">
+      <div class = indiphotos>
+        <div class = front><img class = EBPhoto src = "images/kb.jpg"></div>
+        <div class = "back red"><h1 class = name>Justin Jo</h1><br>Majoring in Computer Engineering<br>From San Rafael, CA<br>Loves soondubu<br>Class of 2018<br><br><hi class = position>PAC Rep.</hi></div>
+      </div>
+    </div>
+
 
 </body>
 
