--- a/public/about.html
+++ b/public/about.html
@@ -285,10 +285,10 @@
           <div class = "back red"><h1 class = name>Jennifer Leung</h1><br><br><br><br><hi class = position></hi></div>
         </div>
       </div>
-      <div class = flip-container ontouchstart="this.classList.toggle('hover');">
+      <div class = flip-container jasper ontouchstart="this.classList.toggle('hover');">
         <div class = indiphotos>
           <div class = front><img class = EBPhoto src = "images/jp.png"></div>
-          <div class = "back blue"><h1 class = name>Jasper Park</h1><br><br><br><hi class = position></hi></div>
+          <div class = "back blue"><h1 class = name>Jasper Park</h1><br>Majoring in Cognitive Brain Science<br>From Alexandria, VA<br>Likes to play/listen to music<br>Pursuiing a career in consumer research<br><hi class = position>Class fo 2019</hi></div>
         </div>
       </div>
       <div class = flip-container ontouchstart="this.classList.toggle('hover');">
@@ -305,7 +305,7 @@
       </div>
     </div>
 
-    <div id = container><p id="text">Busy Monitor informs students on how busy key campus locations are by tracking their live network traffic. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br><br>
+    <div id = container><p id="text">Busy Monitor informs students on how busy key campus locations are by tracking their live network traffic. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br>
     </p>
     <img src="/images/tufts-logo.png" alt="Tufs Logo" id = tufts_logo />
     </div>
