--- a/public/contact.html
+++ b/public/contact.html
@@ -21,6 +21,27 @@
   <link href='https://fonts.googleapis.com/css?family=Julius%20Sans%20One' rel='stylesheet'>
   <link rel="stylesheet" href="/stylesheets/detail.css" />
   <link rel="stylesheet" href="/stylesheets/base.css" />
+
+  <style>
+  #text {
+    display: block;
+    margin:0px auto;
+    width: 50%;
+  }
+  #container{
+    position: absolute;
+    top: 450px;
+    width :100%;
+    height: 20%;
+  }
+
+  #tufts_logo {
+    display: block;
+    margin: 0px auto;
+    margin-top:20px;
+    width: 25%;
+  }
+  </style>
 </head>
 
 <body>
@@ -38,9 +59,9 @@
 
     <h1 id="name">BUSY MONITOR</h1>
 
-    <p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br><br>
-      <img src="/images/tufts-logo.png" alt="Tufs Logo" />
-    </p>
+    <div id = container><p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br></p>
+    <img src="/images/tufts-logo.png" alt="Tufs Logo" id = tufts_logo />
+    </div>
 
 </body>
 
