--- a/public/contact.html
+++ b/public/contact.html
@@ -30,7 +30,7 @@
   }
   #container{
     position: absolute;
-    top: 450px;
+    top: 150px;
     width :100%;
     height: 20%;
   }
@@ -57,7 +57,7 @@
       </div>
     </nav>
 
-    <h1 id="name">BUSY MONITOR</h1>
+    <h1 id="name">CONTACT US</h1>
 
     <div id = container><p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br></p>
     <img src="/images/tufts-logo.png" alt="Tufs Logo" id = tufts_logo />
