--- a/public/contact.html
+++ b/public/contact.html
@@ -28,12 +28,6 @@
     margin:0px auto;
     width: 50%;
   }
-  #container{
-    position: absolute;
-    top: 150px;
-    width :100%;
-    height: 20%;
-  }
 
   #tufts_logo {
     display: block;
@@ -59,9 +53,8 @@
 
     <h1 id="name">CONTACT US</h1>
 
-    <div id = container><p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br></p>
+    <p id="text">If you have any questions/concerns regarding the website, please email mchow@cs.tufts.edu.<br></p>
     <img src="/images/tufts-logo.png" alt="Tufs Logo" id = tufts_logo />
-    </div>
 
 </body>
 
