i swear to god one more typo and I will....

--- a/public/about.html
+++ b/public/about.html
@@ -288,7 +288,7 @@
       <div class = flip-container jasper ontouchstart="this.classList.toggle('hover');">
         <div class = indiphotos>
           <div class = front><img class = EBPhoto src = "images/jp.png"></div>
-          <div class = "back blue"><h1 class = name>Jasper Park</h1><br>Majoring in Cognitive Brain Science<br>From Alexandria, VA<br>Likes to play/listen to rock music<br>Is Pursuing a career in consumer research<br><hi class = position>Class fo 2019</hi></div>
+          <div class = "back blue"><h1 class = name>Jasper Park</h1><br>Majoring in Cognitive Brain Science<br>From Alexandria, VA<br>Likes to play/listen to rock music<br>Is Pursuing a career in consumer research<br><hi class = position>Class of 2019</hi></div>
         </div>
       </div>
       <div class = flip-container ontouchstart="this.classList.toggle('hover');">
