--- a/public/eaton.html
+++ b/public/eaton.html
@@ -90,7 +90,7 @@
       }
       else if(percentage_num > 20 && percentage_num <= 40) {
           bat_image.setAttribute("src","images/b1.png");
-          figcaption.innerHTML = "Somewhat Busy";
+          figcaption.innerHTML = "Kinda Busy";
       }
       else if(percentage_num > 40 && percentage_num <= 60) {
           bat_image.setAttribute("src","images/b2.png");
