--- a/public/carmichael.html
+++ b/public/carmichael.html
@@ -133,7 +133,7 @@
   </nav>
   <h1 id="name">Carmichael</h1>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <span class="emph">Overview:</span><br>
       <ul class="check">
         <li>Carmichael is currently <span id = "percentageData" class="detail"></span> busy</li>
@@ -143,24 +143,65 @@
       <br>
       <span class="emph">Hours of Operation:</span><br>
       <ul class="check">
-      <li>Monday - Friday: 7:15 AM to 8 PM</li>
-      <li>Saturday: 11 AM to 8 PM</li>
-      <li>Sunday: 8 AM to 9 PM</li>
-    </div>
-    <div class="col-md-4">
-      <div id="chartContainer"></div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
+        <li>Monday - Friday: 7:15 AM to 8 PM</li>
+        <li>Saturday: 11 AM to 8 PM</li>
+        <li>Sunday: 8 AM to 9 PM</li>
+      </ul>
       <figure>
         <img id = "bat_image" class="bat_img" alt="busy-battery" />
         <figcaption id = "figcaption"></figcaption>
       </figure>
     </div>
+    <div class="col-md-5">
+      <div id="chartContainer"></div>
+    </div>
+    <div class="col-md-4" id="dining_info">
+      <!-- https://bootstrapdocs.com/v3.3.6/docs/javascript/#collapse -->
+      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingOne">
+            <h4 class="panel-title">
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" id='Breakfast_header'>
+                Breakfast
+              </a>
+            </h4>
+          </div>
+          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div class="panel-body" id="Breakfast_body">
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingTwo">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" id='Lunch_header'>
+                Lunch
+              </a>
+            </h4>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div class="panel-body" id="Lunch_body">
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingThree">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" id='Dinner_header'>
+                Dinner
+              </a>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div class="panel-body" id="Dinner_body">
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
 
-
+  <script type="text/javascript" src="/js/dining.js"></script>
+  <script>get_menu('carm');</script>
 <script type="text/javascript" src="/js/detail_carm.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
