fix mobile responsiveness on detail pages

--- a/public/about.html
+++ b/public/about.html
@@ -269,9 +269,9 @@
       <div class="container text-center">
         <div id="navbar" class="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li class="active"><a href="about.html">About</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -279,35 +279,43 @@
 
     <h1 id="name">ABOUT US</h1>  
     <div id = "EMphotos">
-      <div class = flip-container ontouchstart="this.classList.toggle('hover');">
-        <div class = indiphotos>
-          <div class = front><img class = EBPhoto id = leo src = "images/jl.jpg"></div>
-          <div class = "back red"><h1 class = name>Jennifer Leung</h1><br><br><br><br><hi class = position></hi></div>
+      <div class="flip-container jenn" ontouchstart="this.classList.toggle('hover');">
+        <div class = "indiphotos">
+          <div class = front><img class = "EBPhoto" id = "leo" src = "images/jl.jpg"></div>
+          <div class = "back red">
+            <h1 class = "name">Jennifer Leung</h1><br>Majoring in Computer Science and Psychology<br>From New York City, NY<br>Weak for desserts<br>Wants to become a Software Engineer<br><hi class = "position">Class of 2019</hi>
+          </div>
         </div>
       </div>
-      <div class = flip-container jasper ontouchstart="this.classList.toggle('hover');">
-        <div class = indiphotos>
-          <div class = front><img class = EBPhoto src = "images/jp.png"></div>
-          <div class = "back blue"><h1 class = name>Jasper Park</h1><br>Majoring in Cognitive Brain Science<br>From Alexandria, VA<br>Likes to play/listen to rock music<br>Is Pursuing a career in consumer research<br><hi class = position>Class of 2019</hi></div>
+      <div class="flip-container jasper" ontouchstart="this.classList.toggle('hover');">
+        <div class = "indiphotos">
+          <div class = front><img class = "EBPhoto" src = "images/jp.png"></div>
+          <div class = "back blue">
+            <h1 class = "name">Jasper Park</h1><br>Majoring in Cognitive Brain Science<br>From Alexandria, VA<br>Likes to play/listen to rock music<br>Pursuing a career in consumer research<br><hi class = "position">Class of 2019</hi>
+          </div>
         </div>
       </div>
-      <div class = flip-container ontouchstart="this.classList.toggle('hover');">
-        <div class = indiphotos>
-          <div class = front><img class = EBPhoto src = "images/mf.jpg"></div>
-          <div class = "back red"><h1 class = name>Michelle Feng</h1><br><br><br><br><hi class = position></hi></div>
+      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+        <div class = "indiphotos">
+          <div class = front><img class = "EBPhoto" src = "images/mf.jpg"></div>
+          <div class = "back red">
+            <h1 class = "name">Michelle Feng</h1><br><br><br><br><hi class = "position"></hi>
+          </div>
         </div>
       </div>
       <div class = "flip-container kevin" ontouchstart="this.classList.toggle('hover');">
-        <div class = indiphotos>
-          <div class = front><img class = EBPhoto src = "images/kb.jpg"></div>
-          <div class = "back blue"><h1 class = name>Kevin Bae</h1><br>Majoring in Computer Science<br>From Norwood, NJ<br>Loves trying new restaurants<br>Wants to become a Software Engineer or Cyber Security Engineer<br><br><hi class = position>Class of 2020</hi></div>
+        <div class = "indiphotos">
+          <div class = front><img class = "EBPhoto" src = "images/kb.jpg"></div>
+          <div class = "back blue">
+            <h1 class = "name">Kevin Bae</h1><br>Majoring in Computer Science<br>From Norwood, NJ<br>Loves trying new restaurants<br>Wants to become a Software Engineer or Cyber Security Engineer<br><br><hi class = "position">Class of 2020</hi>
+          </div>
         </div>
       </div>
     </div>
 
-    <div id = container><p id="text">Busy Monitor informs students on how busy key campus locations are by tracking their live network traffic. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br>
+    <div id = "container"><p id="text">Busy Monitor informs students on how busy key campus locations are by tracking their live network traffic. The application was created by Kevin Bae, Michelle Feng, Jennifer Leung, and Jasper Park, as part of a COMP 20 group project.<br>
     </p>
-    <img src="/images/tufts-logo.png" alt="Tufs Logo" id = tufts_logo />
+    <img src="/images/tufts-logo.png" alt="Tufs Logo" id = "tufts_logo" />
     </div>
     
     
