tisch data & bug fix in eaton

--- a/public/about.html
+++ b/public/about.html
@@ -299,7 +299,7 @@
         <div class = "indiphotos">
           <div class = front><img class = "EBPhoto" src = "images/mf.jpg"></div>
           <div class = "back red">
-            <h1 class = "name">Michelle Feng</h1><br>Majoring in English and Computer Science<br>From Beijing, China<br>Loves 20th century literature<br>Very unsure about the future<hi class = "position">Class of 2019</hi>
+            <h1 class = "name">Michelle Feng</h1><br>Majoring in English and Computer Science<br>From Beijing, China<br>Loves 20th century literature<br>Very unsure about the future<br><hi class = "position">Class of 2019</hi>
           </div>
         </div>
       </div>
