--- a/public/eaton.html
+++ b/public/eaton.html
@@ -32,7 +32,11 @@
       var bat_image = document.getElementById("bat_image");
       var day = date.getDay();
       var hour = date.getHours();
+
       if (day >= 1 && day <= 5) {
+
+        close.innerHTML = "4 AM";
+        
         if(day == 5) {
           if(hour >= 4) {
             close.innerHTML = "8 PM";
@@ -40,7 +44,7 @@
           else {
             close.innerHTML = "4 AM";
           }
-          
+
           if(F_percentage[hour] == undefined) {
             percentage.innerHTML = "0%";
             isItClosed.innerHTML = "This place is closed right now";
@@ -142,7 +146,7 @@
       <span class="emph">Overview:</span><br>
       <ul class="check">
         <li>Eaton is currently <span id = "percentageData" class="detail"></span> busy</li>
-        <li>People typically spend <span id = "timespentData" class="detail"90</span> minutes</li>
+        <li>People typically spend <span id = "timespentData" class="detail">90</span> minutes</li>
         <li id = "closed">Closes at <span id = "timecloseData" class="detail"></span> today</li>
       </ul>
       <br>
