--- a/public/tisch.html
+++ b/public/tisch.html
@@ -23,10 +23,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script>
-    MTWTh_percentage = {0:20,1:10,2:5,3:0,7:5,8:5,9:10,10:30,11:50,12:60,13:50,14:40,15:30,16:30,17:40,18:55,19:70,20:60,21:50,22:60,23:30,24:20}
-    F_percentage = {0:20,1:10,2:5,3:0,7:5,8:5,9:10,10:20,11:40,12:30,13:40,14:40,15:20,16:30,17:20,18:20,19:10,20:20,21:20,22:20,23:10,24:0}
-    Sa_percentage = {10:10,11:20,12:40,13:50,14:40,15:20,16:10,17:10,18:55,19:50,20:30,21:50,22:40,23:30,24:0}
-    Su_percentage = {10:1,11:20,12:20,13:40,14:40,15:50,16:40,17:30,18:50,19:70,20:70,21:60,22:60,23:60,24:40}
+    MTWTh_percentage = {8:10,9:15,10:21,11:32,12:40,13:45,14:48,15:50,16:53,17:55,18:56,19:57,20:56,21:47,40:60,23:31,24:20,0:10,1:10}
+    F_percentage = {8:5,9:8,10:10,11:14,12:14,13:15,14:15,15:18,16:22,17:26,18:30,19:34,20:38,21:35}
+    Sa_percentage = {10:0,11:10,12:15,13:20,14:30,15:34,16:40,17:45,18:55,19:54,20:38,21:35,22:35}
+    Su_percentage = {10:16,11:25,12:40,13:45,14:50,15:52,16:50,17:50,18:45,19:38,20:30,21:25,22:20,23:10,24:10,0:10,1:10}
     $( document ).ready(function() {
       date = new Date();
       var close = document.getElementById("timecloseData");
@@ -37,58 +37,132 @@
       var bat_image = document.getElementById("bat_image");
       var day = date.getDay();
       var hour = date.getHours();
-      if (day >= 1 && day <= 5) {
-        close.innerHTML = "3 AM";
-        if(day == 5) {
-          if(hour >=3) {
-            close.innerHTML = "12 PM"
-          }
-          else {
-            close.innerHTML = "3 AM";
-          }
-          if(F_percentage[hour] == undefined) {
-            percentage.innerHTML = "0%";
-            isItClosed.innerHTML = "This place is closed right now";
 
-          }
-          else {
-            percentage_num = F_percentage[hour]
-            percentage.innerHTML = F_percentage[hour] + "%";
-          }
+      <!-- if Friday -->
+      if(day == 5) {
+        close.innerHTML = "9 PM";
+
+        <!-- overflow from weekday late night study -->
+        if(hour >= 1 && hour <= 6) {
+                close.innerHTML = "6 AM";
+        }
+
+        <!-- overflow from weekday -->
+        if(hour >=0 && hour <= 1) {
+                close.innerHTML = "1 AM";
+                percentage_num = MTWTh_percentage[hour];
+                percentage.innerHTML = MTWTh_percentage[hour] + "%";
         }
         else {
-          if(MTWTh_percentage[hour] == undefined) {
-            percentage.innerHTML = "0%";
-            isItClosed.innerHTML = "This place is closed right now";
-          }
-          else {
-            percentage_num = MTWTh_percentage[hour]
-            percentage.innerHTML = MTWTh_percentage[hour] + "%";
-          }
+                if(F_percentage[hour] == undefined) {
+
+                        <!-- weekday late night -->
+                        if(hour >= 1 && hour <=6) {
+                                percentage.innerHTML = "0%";
+                                isItClosed.innerHTML = "There is no population record for late night study";
+                        }
+                        else {
+                                percentage.innerHTML = "0%";
+                                isItClosed.innerHTML = "This place is closed right now";
+                        }
+                }
+                else {
+                        percentage_num = F_percentage[hour]
+                        percentage.innerHTML = F_percentage[hour] + "%";
+                }
         }
       }
+      
+      <!-- if weekday -->
+      if (day >= 1 && day <= 4) {
+              close.innerHTML = "1 AM";
+
+              <!-- if late night -->
+              if(hour >= 1 && hour <= 6) {
+                      close.innerHTML = "6 AM";
+              }
+
+              <!-- overflow from sunday -->
+              if(day == 1 && hour >= 0 && hour <= 1) {
+                      close.innerHTML = "1 AM";
+                      percentage_num = Su_percentage[hour];
+                      percentage.innerHTML = Su_percentage[hour] + "%";
+              }
+              else {
+                      if(MTWTh_percentage[hour] == undefined) {
+
+                              <!-- late night -->
+                              if(hour >= 1 && hour <= 6) {
+                                      percentage.innerHTML = "0%";
+                                      isItClosed.innerHTML = "There is no population record for late night study";
+                              }
+                              else {
+                                      percentage.innerHTML = "0%";
+                                      isItClosed.innerHTML = "This place is closed right now";
+                              }
+                      }
+                      else {
+                              percentage_num = MTWTh_percentage[hour];
+                              percentage.innerHTML = MTWTh_percentage[hour] + "%";
+                      }
+              }
+      }
+
+      <!-- if Sunday -->
       else if (day == 0) {
-        close.innerHTML = "3 AM";
+        close.innerHTML = "1 AM";
+
+        <!-- if late night -->
+        if(hour >= 1 && hour <= 6) {
+                close.innerHTML = "6 AM";
+        }
+
         if(Su_percentage[hour] == undefined) {
-          percentage.innerHTML = "0%";
-          isItClosed.innerHTML = "This place is closed right now";
+
+                <!-- late night -->
+                if(hour >= 1 && hour <= 6) {
+                        percentage.innerHTML = "0%";
+                        isItClosed.innerHTML = "There is no population record for late night study";
+                }
+                else {
+                        percentage.innerHTML = "0%";
+                        isItClosed.innerHTML = "This place is closed right now";
+                }
         }
         else {
-          percentage_num = Su_percentage[hour]
+          percentage_num = Su_percentage[hour];
           percentage.innerHTML = Su_percentage[hour] + "%";
         }
       }
+
+      <!-- if Saturday -->
       else {
-        close.innerHTML = "12 PM"
-        if(Sa_percentage[hour] == undefined) {
-          percentage.innerHTML = "0%";
-          isItClosed.innerHTML = "This place is closed right now";
+        close.innerHTML = "12 AM";
+
+        <!-- if late night -->
+        if (hour >= 0 && hour <= 6) {
+                close.innerHTML = "6 AM";
         }
-        else{
-          percentage_num = Sa_percentage[hour]
+
+        if(Sa_percentage[hour] == undefined) {
+
+                <!-- late night -->
+                if (hour >= 0 && hour <= 6) {
+                        percentage.innerHTML = "0%";
+                        isItClosed.innerHTML = "There is no population record for late night study";
+                }
+                else {
+                        percentage.innerHTML = "0%";
+                        isItClosed.innerHTML = "This place is closed right now";
+                }
+        }
+        else {
+          percentage_num = Sa_percentage[hour];
           percentage = Sa_percentage[hour] + "%";
         }
       }
+
+
       if(percentage_num >= 0 && percentage_num <= 20) {
           bat_image.setAttribute("src","images/b0.png");
           figcaption.innerHTML = "Not Busy";
@@ -143,16 +217,16 @@
       <span class="emph">Overview:</span><br>
       <ul class="check">
         <li>Tisch is currently <span id = "percentageData" class="detail"></span> busy</li>
-        <li>People typically spend <span id = "timespentData" class="detail"120</span> minutes</li>
+        <li>People typically spend <span id = "timespentData" class="detail">120</span> minutes</li>
         <li id = "closed">Closes at <span id = "timecloseData" class="detail"></span> today</li>
       </ul>
       <br>
       <span class="emph">Hours of Operation:</span><br>
       <ul class="check">
-        <li>Monday - Thursday: 7:45 AM to 1 AM (3 AM for Late Night Study)</li>
-        <li>Friday: 7:45 AM to 9 PM (12 AM for Late Night Study)</li>
-        <li>Saturday: 10 AM to 9 PM (12 AM for Late Night Study)</li>
-        <li>Sunday: 10 AM to 1 AM (3 AM for Late Night Study)</li>
+        <li>Monday - Thursday: 7:45 AM to 1 AM (6 AM for Late Night Study)</li>
+        <li>Friday: 7:45 AM to 9 PM (6 AM for Late Night Study)</li>
+        <li>Saturday: 10 AM to 9 PM (6 AM for Late Night Study)</li>
+        <li>Sunday: 10 AM to 1 AM (6 AM for Late Night Study)</li>
       </ul>
       <figure>
         <img id = "bat_image" class="bat_img" alt="busy-battery" />
