--- a/public/tisch.html
+++ b/public/tisch.html
@@ -67,12 +67,12 @@
                         }
                 }
                 else {
-                        percentage_num = F_percentage[hour]
+                        percentage_num = F_percentage[hour];
                         percentage.innerHTML = F_percentage[hour] + "%";
                 }
         }
       }
-      
+
       <!-- if weekday -->
       if (day >= 1 && day <= 4) {
               close.innerHTML = "1 AM";
