--- a/public/about.html
+++ b/public/about.html
@@ -307,7 +307,7 @@
         <div class = "indiphotos">
           <div class = front><img class = "EBPhoto" src = "images/kb.jpg"></div>
           <div class = "back blue">
-            <h1 class = "name">Kevin Bae</h1><br>Majoring in Computer Science<br>From Norwood, NJ<br>Loves trying new restaurants<br>Wants to become a Software Engineer or Cyber Security Engineer<br><hi class = "position">Class of 2020</hi>
+            <h1 class = "name">Kevin Bae</h1>Majoring in Computer Science<br>From Norwood, NJ<br>Loves trying new restaurants<br>Wants to become a Software Engineer or Cyber Security Engineer<br><hi class = "position">Class of 2020</hi>
           </div>
         </div>
       </div>
